
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(testngpp)

INCLUDE(ProjectVar.txt)

FIND_LIBRARY(DL_LIBRARY NAMES dl)
IF(DL_LIBRARY)
  SET(TESTNGPP_USE_DLOPEN TRUE)
ELSE(DL_LIBRARY)
  SET(TESTNGPP_USE_DLOPEN FALSE)
ENDIF(DL_LIBRARY)

FIND_LIBRARY(LTDL_LIBRARY NAMES ltdl)
IF(LTDL_LIBRARY)
  SET(TESTNGPP_USE_LTDL TRUE)
ELSE(LTDL_LIBRARY)
  SET(TESTNGPP_USE_LTDL FALSE)
ENDIF(LTDL_LIBRARY)

IF(MSVC)
  SET(TESTNGPP_USE_LOADLIBRARY TRUE)
ELSE(MSVC)
  SET(TESTNGPP_USE_LOADLIBRARY FALSE)
ENDIF(MSVC)

ADD_SUBDIRECTORY(src/loaders)

