
IF(MSVC)
  ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
ENDIF(MSVC)

ADD_DEFINITIONS(
    -DPACKAGE_NAME=${PACKAGE_NAME}
    -DPACKAGE_STRING=${PACKAGE_STRING}
    -DPACKAGE_BUGREPORT=${PACKAGE_BUGREPORT}
    -DPACKAGE_URL=${PACKAGE_URL}
    -DPACKAGE=${PACKAGE}
    -DVERSION=${VERSION}
)

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR}/include)

IF(TESTNGPP_USE_DLOPEN)
  SET(LOADER_LIB_SRCS DLModuleLoader.cpp)
ENDIF(TESTNGPP_USE_DLOPEN)

ADD_LIBRARY(testngpp-module-loader STATIC ${LOADER_LIB_SRCS})

IF(TESTNGPP_USE_DLOPEN)
  TARGET_LINK_LIBRARIES(testngpp-module-loader dl)
ENDIF(TESTNGPP_USE_DLOPEN)

